--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Ideas & Inspiration</title>
   <meta name="description" content="Get inspired with creative ideas for planners, printables, and mom-friendly digital resources." />
-  <meta name="keywords" content="planner ideas, mom life, digital printables, creative projects, organization tips" />
   <link rel="stylesheet" href="css/style.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous" defer></script>
@@ -15,26 +14,19 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
         <a class="navbar-brand" href="/index-1.html">Homepage</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown"
-                aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/blog.html">Art Ideas</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/about.html">About</a>
-            </li>
+            <li class="nav-item"><a class="nav-link" href="/shop.html">Shop</a></li>
+            <li class="nav-item"><a class="nav-link" href="/about.html">About</a></li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button"
-                 data-bs-toggle="dropdown" aria-expanded="false">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 More Items
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="/shop.html">Shop</a></li>
+                <li><a class="dropdown-item" href="/services.html">Services</a></li>
                 <li><a class="dropdown-item" href="/contact.html">Contact</a></li>
                 <li><a class="dropdown-item" href="/account.html">Account</a></li>
               </ul>
@@ -43,43 +35,237 @@
         </div>
       </div>
     </nav>
-  </header>
+</header>
+<style>
 
-  <main>
-    <div class="container">
-      <h1 class="text-center p-4 my-4 bg-warning rounded shadow-sm">Ideas & Inspiration for Busy Moms and Creatives</h1>
-      <p class="intro-text text-center mx-auto mb-5" style="max-width: 700px;">
+  .inspiration-page {
+    background-color: #fff;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  }
+  
+  .inspiration-hero {
+    text-align: center;
+    padding: 4rem 1rem;
+    background-color: #fdf6f0;
+    color: #333;
+  }
+  
+  .inspiration-title {
+    font-size: 2.5rem;
+    font-weight: bold;
+    margin-bottom: 1rem;
+  }
+  
+  .inspiration-subtext {
+    font-size: 1.25rem;
+    max-width: 700px;
+    margin: 0 auto;
+  }
+  
+  .inspiration-post {
+    margin: 0;
+    padding: 0;
+  }
+  
+  .inspiration-image-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+  }
+  
+  .inspiration-image {
+    width: 60%;
+    height: auto;
+    display: block;
+    object-fit: cover;
+  }
+  
+  .inspiration-content {
+    padding: 3rem 1.5rem;
+    max-width: 800px;
+    margin: 0 auto;
+  }
+  
+  .inspiration-heading {
+    font-size: 2rem;
+    margin-bottom: 1rem;
+  }
+  
+  .inspiration-content h4 {
+    margin-top: 2rem;
+    font-size: 1.25rem;
+    font-weight: 600;
+  }
+  
+  .inspiration-content ul,
+  .inspiration-content ol {
+    margin-left: 1.5rem;
+    margin-top: 0.5rem;
+    margin-bottom: 1.5rem;
+  }
+  
+  .inspiration-content p,
+  .inspiration-content h4 {
+    margin-bottom: 1rem;
+  }
+  
+</style>
+  <main class="inspiration-page">
+    <!-- Hero Section -->
+    <section class="inspiration-hero">
+      <h1 class="inspiration-title">Ideas & Inspiration for Busy Moms and Creatives</h1>
+      <p class="inspiration-subtext">
         Explore tips, tools, and ideas to help you balance creativity, family, and business. Whether you're planning your day or designing something beautiful — these ideas are for YOU.
       </p>
+    </section>
 
-      <div class="row">
-        <!-- Card 1 -->
-        <div class="col-md-4">
-          <div class="card mb-4 shadow-sm">
-            <img src="pictures/Firefly watercolor art illustration of beautiful landscape with sun and clouds 97593.jpg" class="card-img-top" alt="Artistic watercolor landscape with sun and clouds" />
-            <div class="card-body">
-              <h5 class="card-title">How to Make a Daily Planner That Works for You</h5>
-              <p class="card-text">Ditch the overwhelm and build a daily planner that helps you stay focused without stress. Includes a free downloadable template!</p>
-              <a href="/blog-post1.html" class="btn btn-outline-primary">Read More</a>
-            </div>
-          </div>
-        </div>
+    <!-- Blog Post Section -->
+    <section class="inspiration-post">
+      <div class="inspiration-image-wrapper">
+        <picture>
+          <img src="pictures/watercolor flower.jpg" alt="Spring blossoms craft with kids" class="inspiration-image" />
+        </picture>
+      </div>
+      <div class="inspiration-content">
+        <h2 class="inspiration-heading">Spring Blossoms: Easy Floral Craft for Kids and Parents</h2>
+        <p>Celebrate the season of renewal with this easy and fun spring blossoms craft! A perfect project for kids and parents to enjoy together.</p>
 
-        <!-- Card 2 -->
-        <div class="col-md-4">
-          <div class="card mb-4 shadow-sm">
-            <img src="pictures/plane.jpg" class="card-img-top" alt="Colorful Plane" />
-            <div class="card-body">
-              <h5 class="card-title">Kid-Friendly Chore Charts That Actually Work</h5>
-              <p class="card-text">Tired of the battle? Try our printable chore charts designed to motivate, reward, and make life a little easier for everyone.</p>
-              <a href="/blog-post2.html" class="btn btn-outline-primary">Read More</a>
-            </div>
-          </div>
-        </div>
+        <h4>Materials:</h4>
+        <ul>
+          <li>Construction paper (various colors)</li>
+          <li>Scissors</li>
+          <li>Glue</li>
+          <li>Markers, crayons, or watercolor paints</li>
+          <li>Green pipe cleaners (for stems)</li>
+        </ul>
 
-        <!-- Card 3 -->
-        <div class="col-md-4">
-          <div class="card mb-4 shadow-sm">
-            <img src="pictures/Firefly art that moms would like 64217.jpg" class="card-img-top" alt="Woman designing on Canva using a laptop" />
-            <div class="card-body">
-              <h5 class="card-title">Creative Ways to Use Canva for Family Projects</h5
+        <h4>Instructions:</h4>
+        <ol>
+          <li>Cut out flower shapes from the colored construction paper.</li>
+          <li>Have your little ones decorate each flower with markers, crayons, or watercolor paints.</li>
+          <li>Once dry, glue the flowers to a piece of construction paper.</li>
+          <li>Attach green pipe cleaners as stems for a more realistic touch.</li>
+          <li>Arrange the flowers in a vase or hang them up as a wall display.</li>
+        </ol>
+
+        <h4>Why We Love It:</h4>
+        <p>This craft not only lets kids explore their creativity but also teaches them about flowers and springtime. Plus, it’s a great way to brighten up the home with DIY décor!</p>
+      </div>
+    </section>
+
+    <!-- Blog Post Section -->
+    <section class="inspiration-post">
+      <div class="inspiration-image-wrapper">
+        <picture>
+          <img src="pictures//Firefly watercolor flowers 64217.jpg" alt="Spring blossoms craft with kids" class="inspiration-image" />
+        </picture>
+      </div>
+      <div class="inspiration-content">
+        <h2 class="inspiration-heading"> Summer Sunshine Prints: Capturing the Warmth of Summer in Art</h2>
+        <p>Nothing says summer like the warm sunshine, and this craft will help your little ones capture that sunshine in a fun and artistic way.
+           Using simple materials, your kids will create prints of sunshine, perfect for adding a splash of summer to your space.</p>
+
+        <h4>Materials:</h4>
+        <ul>
+          <li>Yellow and Orange Paint</li>
+          <li>Construction paper or canvas</li>
+          <li>Sponges or paintbrushes</li>
+          <li>Markers or colored pencils for details</li>
+        </ul>
+
+        <h4>Instructions:</h4>
+        <ol>
+          <li>Dip a sponge or paintbrush into yellow paint and create a sun shape on the paper.</li>
+          <li>Add orange or red around the edges to give the sun a glowing effect.</li>
+          <li>Allow the paint to dry.</li>
+          <li>Use markers or colored pencils to add fun details such as rays or a happy face to the sun.</li>
+        </ol>
+
+        <h4>Why We Love It:</h4>
+        <p>
+          This easy craft captures the warmth and joy of summer in a way that even toddlers can enjoy. The best part? It's super easy to clean up afterward!
+        </p>
+      </div>
+    </section>
+
+     <!-- Blog Post Section -->
+     <section class="inspiration-post">
+      <div class="inspiration-image-wrapper">
+        <picture>
+          <img src="pictures/orangeflowers.jpg" alt="Spring blossoms craft with kids" class="inspiration-image" />
+        </picture>
+      </div>
+      <div class="inspiration-content">
+        <h2 class="inspiration-heading">Autumn Leaf Animals: Crafting with Nature’s Colors</h2>
+        <p>
+          Fall is all about vibrant colors and the beauty of nature, so why not bring a bit of that magic indoors with this autumn leaf craft? 
+          With fallen leaves, a little creativity, and some simple supplies, you and your kids can turn leaves into adorable animal shapes!
+        </p>
+        <h4>Materials:</h4>
+        <ul>
+          <li>Fallen leaves (try to get various shapes and colors)</li>
+          <li>Scissors</li>
+          <li>Glue</li>
+          <li>Markers, googly eyes, and construction paper for details</li>
+        </ul>
+
+        <h4>Instructions:</h4>
+        <ol>
+          <li>Gather a variety of fallen leaves. Each one will be the base of your animal.</li>
+          <li>Use the leaves to form the body and features of different animals—like a fox, owl, or squirrel.</li>
+          <li>Glue the leaves onto construction paper to form the shape of the animal.</li>
+          <li>Add googly eyes, a nose, and other features with markers or cut-out paper.</li>
+        </ol>
+
+        <h4>Why We Love It:</h4>
+        <p>
+          This craft is a wonderful way to explore the changing seasons and enjoy nature. Plus, kids will love seeing the leaves turn into fun creatures!
+        </p>
+      </div>
+    </section>
+
+    <!-- Blog Post Section -->
+    <section class="inspiration-post">
+      <div class="inspiration-image-wrapper">
+        <picture>
+          <img src="pictures/Art.jpg" alt="Spring blossoms craft with kids" class="inspiration-image" />
+        </picture>
+      </div>
+      <div class="inspiration-content">
+        <h2 class="inspiration-heading">Winter Snowflakes: DIY Frozen Art to Celebrate the Season</h2>
+        <p>
+          Winter is magical, and snowflakes are the perfect symbol of this chilly season. Bring some frosty fun into your home by making paper snowflakes with your kids. 
+          These are perfect for hanging around the house or creating festive decorations for the holidays.
+        </p>
+        <h4>Materials:</h4>
+        <ul>
+          <li>White paper</li>
+          <li>Scissors</li>
+          <li>Glitter (optional)</li>
+          <li>Markers, crayons, or paints</li>
+        </ul>
+
+        <h4>Instructions:</h4>
+        <ol>
+          <li>Start with a square piece of paper.</li>
+          <li>Fold the paper in half diagonally, then fold it again to form a triangle.</li>
+          <li>Cut out various shapes along the edges of the folded paper (the more cuts you make, the more intricate your snowflake will be).</li>
+          <li>Carefully unfold the paper to reveal your snowflake!</li>
+          <li>Add glitter or color with markers and crayons to make the snowflakes sparkle.</li>
+        </ol>
+
+        <h4>Why We Love It:</h4>
+        <p>
+          This craft is simple, fun, and can be customized with glitter, colors, or even extra decorations. It's a great way to create beautiful decorations while celebrating the winter season.
+        </p>
+      </div>
+    </section>
+
+  </main>
+  <footer>
+    <p>© 2025 Art Templates by Animation Class</p>
+    <p>Art at Home | Made with love and glitter ✨</p>
+  </footer>
+</body>
+</html>
