--- a/about.html
+++ b/about.html
@@ -3,36 +3,39 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Art At Home offers creative ideas, printable templates, and fun art moments for families to enjoy together." />
-  <title>Art At Home</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-        rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-        crossorigin="anonymous" />
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-          integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-          crossorigin="anonymous"></script>
+  <title>About</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous" />
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
   <link rel="stylesheet" href="css/style.css">
 
+</head>
+<body>
+  <header>
+    <nav class="navbar navbar-expand-lg">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index-1.html">Homepage</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item"><a class="nav-link" href="/blog.html">Art Ideas</a></li>
+            <li class="nav-item"><a class="nav-link" href="/about.html">About</a></li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">More</a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="/shop.html">Shop</a></li>
+                <li><a class="dropdown-item" href="/contact.html">Contact</a></li>
+                <li><a class="dropdown-item" href="/account.html">Account</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
   <style>
-    .navbar.bg-body-tertiary {
-      background-color: #b2f0ed !important;
-      border-bottom: 2px solid rgb(2, 255, 255);
-    }
-  
-    .navbar-nav .nav-link {
-      color: #00554e;
-      font-weight: bold;
-    }
-  
-    .navbar-nav .nav-link:hover {
-      color: #016e81;
-    }
-  
-    main {
-      margin-top: 2rem; /* Adds space under navbar */
-    }
-  
     .about-section {
       padding: 3rem 0;
       background-color: #f7fcfc;
@@ -48,19 +51,6 @@
     .about-section p {
       margin-bottom: 1rem;
       line-height: 1.6;
-    }
-  
-    footer {
-      background-color: #b2f0ed;
-      padding: 1.5rem 0;
-      text-align: center;
-      font-size: 1rem;
-      color: #00554e;
-      border-top: 2px solid rgb(2, 255, 255);
-    }
-  
-    footer p {
-      margin: 0;
     }
 
     .quote-section {
@@ -91,47 +81,8 @@
       border: 4px solid #00c2b2;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     }
-  </style>
-
-</head>
-<body>
-
-  <!-- Navigation -->
-  <header>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="/index.html">Homepage</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown"
-                aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/blog.html">Art Ideas</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/about.html">About</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button"
-                 data-bs-toggle="dropdown" aria-expanded="false">
-                More Items
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="/shop.html">Shop</a></li>
-                <li><a class="dropdown-item" href="/contact.html">Contact</a></li>
-                <li><a class="dropdown-item" href="/account.html">Account</a></li>
-              </ul>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-  </header>
-
-  <main>
+</style>
+<main>
     <section class="about-section">
       <div class="container">
         <div class="row align-items-center">
@@ -175,9 +126,9 @@
       </div>
     </section>
   </main>
-
-  <footer class="footer">
-    <p>&copy; 2025 Rachel's Art At Home | All rights reserved</p>
+  <footer>
+    <p>© 2025 Art Templates by Animation Class</p>
+    <p>Art at Home | Made with love and glitter ✨</p>
   </footer>
 
 </body>
