--- a/account.html
+++ b/account.html
@@ -1,72 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Account features coming soon, stay tuned for personalized tools!">
-    <meta name="robots" content="index, follow">
-    <title>Account</title>
-    
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
-          rel="stylesheet" 
-          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
-          crossorigin="anonymous">
-
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="css/style.css">
-    
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
-            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" 
-            crossorigin="anonymous"></script>
-
-    <style>
-        /* Embedded CSS for the account page */
-        body {
-            background-color: #fdfdfd;
-            margin: 0;
-            font-family: Arial, sans-serif;
-        }
-
-        main {
-            height: 80vh;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            text-align: center;
-            padding: 40px;
-        }
-
-        h1 {
-            font-size: 2rem;
-            font-weight: 600;
-            color: #333;
-            margin-bottom: 20px;
-        }
-
-        p.lead {
-            color: #666;
-            font-size: 1.1rem;
-            margin-bottom: 30px;
-        }
-
-        img {
-            max-width: 100%;
-            width: 300px;
-        }
-
-        footer {
-            background-color: #f8f9fa;
-            text-align: center;
-            padding: 20px;
-            font-size: 0.9rem;
-            color: #333;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Account features coming soon, stay tuned for personalized tools!">
+  <meta name="robots" content="index, follow">
+  <title>Account</title>  
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/style.css">  
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </head>
-
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -102,15 +45,16 @@
         </nav>
     </header>
 
-    <main class="d-flex flex-column align-items-center justify-content-center text-center">
-        <h1 class="mb-4">Account Features Coming Soon!</h1>
-        <p class="lead mb-3">We're working on personalized tools just for you—stay tuned!</p>
-        <img src="pictures/comingsoon.jpg" alt="Under construction">
-    </main>
+  <main class="d-flex flex-column align-items-center justify-content-center text-center">
+    <h1 class="mb-4">Account Features Coming Soon!</h1>
+    <p class="lead mb-3">We're working on personalized tools just for you—stay tuned!</p>
+    <img src="pictures/comingsoon.jpg" alt="Under construction">
+  </main>
 
-    <footer class="footer">
-        <p>&copy; 2025 Animation Class</p>
-    </footer>
+  <footer>
+    <p>© 2025 Art Templates by Animation Class</p>
+    <p>Art at Home | Made with love and glitter ✨</p>
+  </footer>
 </body>
 
 </html>
