--- a/contact.html
+++ b/contact.html
@@ -4,22 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-          rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
-            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.css">
     
-    <style>
+  <style>
         body {
             background-color: #fdfdfd;
             margin: 0;
             font-family: Arial, sans-serif;
-        }
-
-        header {
-            background-color: #b2f0ed;
-            border-bottom: 2px solid rgb(2, 255, 255);
         }
 
         main {
@@ -54,19 +47,9 @@
             border: 1px solid #ccc;
             border-radius: 4px;
         }
-
-        footer {
-            background-color: #b2f0ed;
-            padding: 1.5rem 0;
-            text-align: center;
-            color: #00554e;
-            border-top: 2px solid rgb(2, 255, 255);
-        }
-    </style>
+  </style>
 </head>
 <body>
-
-  <!-- Navigation -->
   <header>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
@@ -100,14 +83,10 @@
       </div>
     </nav>
   </header>
-
-  <!-- Main Content Section -->
   <main>
     <section class="contact-section">
       <h2>Contact Us</h2>
       <p>We'd love to hear from you! Please fill out the form below to get in touch with us.</p>
-
-      <!-- Contact Form -->
       <form action="/submit-form" method="POST">
         <div class="form-group">
           <label for="name">Your Name:</label>
@@ -128,11 +107,9 @@
       </form>
     </section>
   </main>
-
-  <!-- Footer -->
   <footer>
-    <p>&copy; 2025 Animation Class | All rights reserved</p>
+    <p>© 2025 Art Templates by Animation Class</p>
+    <p>Art at Home | Made with love and glitter ✨</p>
   </footer>
-
 </body>
 </html>
