--- a/index-1.html
+++ b/index-1.html
@@ -1,234 +1,29 @@
-<!-- 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Art Templates</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-     rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
-     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/css/style.css">
-</head>
-<body>
-    <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="/index-1.html">Homepage</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/shop.html">Shop</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="/about.html">About</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="index-1.html#section-2">More</a>
-                  </li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      More Items
-                    </a>
-                    <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="/services.html">Services</a></li>
-                      <li><a class="dropdown-item" href="/contact.html">Contact</a></li>
-                      <li><a class="dropdown-item" href="/account.html">Account</a></li>
-                    </ul>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </nav>
-    </header>
-  <main>
-    <section class="banner">
-      <div class="banner-textblock">
-        <h1>Main Page heading</h1>
-        <p>this will help with a different layout left to right and not everything in center.</p>
-      </div>
-      <div class="banner-image">
-        <img src="/pictures/Firefly -A mom staring at a blank canvas with a frustrated or overwhelmed expression, surrounded by .jpg" 
-          alt="Mom looking overwhelmed">
-      </div>
-    </section>
-    <section class="banner">
-      <div class="banner-textblock">
-        <h1>This is Fun</h1>
-        <p>this will help with a different layout left to right and not everything in center.</p>
-      </div>
-      <div class="banner-image">
-        <img src="/pictures/Firefly -A mom staring at a blank canvas with a frustrated or overwhelmed expression, surrounded by .jpg" 
-          alt="Mom looking overwhelmed">
-      </div>
-    </section>
-    <section class="banner">
-      <div class="banner-textblock">
-        <h1>but wait there is more!!</h1>
-        <p>this will help with a different layout left to right and not everything in center.</p>
-      </div>
-      <div class="banner-image">
-        <img src="/pictures/Firefly -A mom staring at a blank canvas with a frustrated or overwhelmed expression, surrounded by .jpg" 
-            alt="Mom looking overwhelmed">
-      </div>
-    </section>
-
-  <section class="cards">
-    <div class="cards">
-      <div class="card-image">
-        <div class="card-text-block">
-          <h2>CARD heading</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia sint error repellendus natus iste, minima nostrum, temporibus tenetur iure explicabo est autem! P</p>
-          <img src="/pictures/Firefly -A mom staring at a blank canvas with a frustrated or overwhelmed expression, surrounded by .jpg" 
-            alt="Mom looking overwhelmed">
-        </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="cards">
-      <div class="card-image">
-        <div class="card-text-block">
-          <h2>CARD heading</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia sint error repellendus natus iste, minima nostrum, temporibus tenetur iure explicabo est autem! P</p>
-          <img src="/pictures/Firefly -A mom staring at a blank canvas with a frustrated or overwhelmed expression, surrounded by .jpg" 
-            alt="Mom looking overwhelmed">
-        </div>
-        </div>
-      </div>
-    </div>
-    
-    <div class="cards">
-      <div class="card-image">
-        <div class="card-text-block">
-          <h2>CARD heading</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia sint error repellendus natus iste, minima nostrum, temporibus tenetur iure explicabo est autem! P</p>
-          <img src="/pictures/Firefly -A mom staring at a blank canvas with a frustrated or overwhelmed expression, surrounded by .jpg" 
-            alt="Mom looking overwhelmed">
-        </div>
-        </div>
-      </div>
-    </div>
-</section>
-
-
-
-
-
-      <section class="cta">
-        <div>
-            <h1>Digital Art Templates for Moms</h1>
-            <p>Welcome to a space designed just for moms! Whether you’re looking for creative inspiration, helpful resources, or
-            just a little time for yourself, you’ll find it all here.</p>
-            <img src="/pictures/Firefly -A mom staring at a blank canvas with a frustrated or overwhelmed expression, surrounded by .jpg" 
-            alt="Mom looking overwhelmed">
-            <button>Get Started</button>
-        </div>
-    </section>
-    <section id="section-2" class="main-section">
-      <div>
-          <h2>Helping Moms Stay Creative & Organized!</h2>
-          <p>Templates, Resources, and Inspiration for Busy Moms.</p>
-      </div>  
-  </section>
-  
-  <section class="featured">
-      <div class="featured-item">
-          <h2>Explore our Resources</h2>
-          <img src="/pictures/Firefly a busy mom who turned her passion for art into a beautiful, downloadable template that she’s.jpg" alt="Mom drawing">
-      </div>
-      <div class="featured-item">
-          <h2>Success Stories</h2>
-          <img src="/pictures/Firefly -A close-up of a hand attempting to draw a complex design freehand, with visible eraser mark.jpg" alt="Mom attempting art">
-      </div>
-      <div class="featured-item">
-          <h2>Join Our Community</h2>
-          <img src="/pictures/Firefly Illustrated personas of your target audience (e.g., a busy mom, a beginner artist, a teacher.jpg" alt="A Community of moms">
-      </div>
-  </section>
-    </main>
-    <footer class="footer">
-      <p>Copyright 2025 Animation Class</p>
-  </footer>
-</body>
-</html>
--->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Art At Home</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-        rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-        crossorigin="anonymous" />
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-          integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-          crossorigin="anonymous"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous" />
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
   <link rel="stylesheet" href="css/style.css">
-
-<style>
- .navbar.bg-body-tertiary {
-    background-color:  #b2f0ed !important;
-    border-bottom: 2px solid rgb(2, 255, 255);
-}
-
-.navbar-nav .nav-link {
-    color: #00554e;
-    font-weight: bold;
-}
-
-.navbar-nav .nav-link:hover {
-    color: #016e81;
-}
-
-footer {
-    background-color: #b2f0ed;
-    padding: 1.5rem 0;
-    text-align: center;
-    font-size: 1rem;
-    color: #00554e;
-    border-top: 2px solid rgb(2, 255, 255);
-}
-  
-footer p {
-    margin: 0;
-}
-</style>
 
 </head>
 <body>
-
-  <!-- Navigation -->
   <header>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
         <a class="navbar-brand" href="/index-1.html">Homepage</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown"
-                aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/blog.html">Art Ideas</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/about.html">About</a>
-            </li>
-            <li class="nav-item">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item"><a class="nav-link" href="/blog.html">Art Ideas</a></li>
+            <li class="nav-item"><a class="nav-link" href="/about.html">About</a></li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button"
-                 data-bs-toggle="dropdown" aria-expanded="false">
-                More Items
-              </a>
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">More</a>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="/shop.html">Shop</a></li>
                 <li><a class="dropdown-item" href="/contact.html">Contact</a></li>
@@ -241,79 +36,120 @@ footer p {
     </nav>
   </header>
 
-  <!-- Hero Section 1: Content Left, Image Right -->
   <section class="container hero-section">
     <div class="row align-items-center">
       <div class="col-md-6 section-content">
         <h2>Welcome to Art at Home with Mamas and Littles</h2>
-       <p>Pull up a seat and get cozy — you’re in the right place. Whether you’re a seasoned
-         artist or a caregiver just trying to keep tiny hands busy, this is your space for creative connection. I’m so glad you’re here.</p>
+        <p>Pull up a seat and get cozy — you’re in the right place. Whether you’re a seasoned artist or a caregiver just trying to keep tiny hands busy, this is your space for creative connection.</p>
       </div>
       <div class="col-md-6">
-        <img src="/pictures/Firefly I would Like a under construction image something artsy 12685.jpg">
+        <img src="pictures/more watercolorflower.png" alt="Artistic under construction image">
       </div>
     </div>
   </section>
 
-  <!-- Hero Section 2: Image Left, Content Right -->
   <section class="container hero-section">
     <div class="row align-items-center flex-md-row-reverse">
       <div class="col-md-6 section-content">
         <h2>Not Sure Where to Start?</h2>
-        <p>Don’t worry — this isn’t about perfection. It’s about showing up with love, a little mess, and a splash of creativity. Whether you need quick art ideas,
-           downloadable templates, or a moment of peace, I’ve got your back. Let’s make something beautiful together.</p>
+        <p>Don’t worry — this isn’t about perfection. It’s about showing up with love, a little mess, and a splash of creativity. Whether you need quick art ideas, downloadable templates, or a moment of peace, I’ve got your back.</p>
       </div>
       <div class="col-md-6">
-        <img src="/pictures/Firefly -A mom staring at a blank canvas with a frustrated or overwhelmed expression, surrounded by .jpg"  alt="Creative workspace" />
+        <img src="pictures/Firefly watercolor art illustration of beautiful landscape with sun and clouds 97593.jpg" alt="Mom looking at blank canvas">
       </div>
     </div>
   </section>
 
-  <!-- Three Cards Section -->
-  <section class="container card-group">
-   <a href="/shop.html" class="text-decoration-none text-dark">
+  <section class="container card-group py-5">
     <div class="row row-cols-1 row-cols-md-3 g-4">
       <div class="col">
-        <div class="card h-100">
-          <img src="/pictures/Sunflower.jpg">
-          <div class="card-body">
-            <h5 class="card-title">Downloadable Art Templates Just for You</h5>
-            <p class="card-text">From planners to coloring pages, these easy-to-use templates help you carve out time for creativity — even in the busiest days. Print, play, and personalize.</p>
+        <a href="/shop.html" class="text-decoration-none text-dark">
+          <div class="card h-100">
+            <img src="pictures/Sunflower.jpg" class="card-img-top" alt="Sunflower template">
+            <div class="card-body">
+              <h5 class="card-title">Downloadable Art Templates Just for You</h5>
+              <p class="card-text">From planners to coloring pages, these templates help you carve out time for creativity. Print, play, and personalize.</p>
+            </div>
           </div>
-        </div>
+        </a>
       </div>
-   </a>
-   <a href="/about.html" class="text-decoration-none text-dark">
       <div class="col">
-        <div class="card h-100">
-          <img src="/pictures/plants.jpg">
-          <div class="card-body">
-            <h5 class="card-title">Made by a Mama, for Mamas</h5>
-            <p class="card-text">Every resource here comes from a place of lived experience — a creative heart trying to balance motherhood and making. I hope it helps you find your own rhythm.
-
-          </p>
+        <a href="/about.html" class="text-decoration-none text-dark">
+          <div class="card h-100">
+            <img src="pictures/tulips.jpg" class="card-img-top" alt="Houseplants and creativity">
+            <div class="card-body">
+              <h5 class="card-title">Made by a Mama, for Mamas</h5>
+              <p class="card-text">Every resource here comes from lived experience — a creative heart trying to balance motherhood and making. Find your rhythm here.</p>
+            </div>
           </div>
-        </div>
+        </a>
       </div>
-   </a>
-   <a href="/blog.html" class="text-decoration-none text-dark">
       <div class="col">
-        <div class="card h-100">
-          <img src="/pictures/Firefly art templates 86662.jpg" class="card-img-top" alt="Business Tools">
-          <div class="card-body">
-            <h5 class="card-title">Creative Sparks When You’re Feeling Stuck</h5>
-            <p class="card-text">These ideas aren’t just for the kids — they’re for you too. Reignite your own creativity and find peace in playful moments, no matter your skill level.</p>
+        <a href="/blog.html" class="text-decoration-none text-dark">
+          <div class="card h-100">
+            <img src="pictures/plants.jpg" class="card-img-top" alt="Art inspiration tools">
+            <div class="card-body">
+              <h5 class="card-title">Creative Sparks When You’re Feeling Stuck</h5>
+              <p class="card-text">These ideas aren’t just for kids — they’re for you too. Reignite your creativity and find peace in playful moments.</p>
+            </div>
           </div>
-        </div>
+        </a>
       </div>
     </div>
-   </a>
+  </section>
+  <section class="section-content">
+    <h3>Seasonal Crafts</h3>
+    <div class="card-group">
+      <div class="col">
+        <a href="/blog/spring-blossoms.html" class="text-decoration-none text-dark">
+          <div class="card">
+            Spring Blossoms
+          </div>
+        </a>
+      </div>
+      <div class="col">
+        <a href="/blog/summer-sunshine-prints.html" class="text-decoration-none text-dark">
+          <div class="card">
+            Summer Sunshine Prints
+          </div>
+        </a>
+      </div>
+      <div class="col">
+        <a href="/blog/autumn-leaf-animals.html" class="text-decoration-none text-dark">
+          <div class="card">
+            Autumn Leaf Animals
+          </div>
+        </a>
+      </div>
+      <div class="col">
+        <a href="/blog/winter-snowflakes.html" class="text-decoration-none text-dark">
+          <div class="card">
+            Winter Snowflakes
+          </div>
+        </a>
+      </div>
+    </div>
   </section>
 
-  <!-- Footer -->
   <footer>
     <p>© 2025 Art Templates by Animation Class</p>
+    <p>Art at Home | Made with love and glitter ✨</p>
   </footer>
-
+  <script>
+    // Function to start the confetti
+    function startConfetti() {
+      confetti({
+        particleCount: 100,
+        spread: 70,
+        origin: { y: 0.6 }
+      });
+    }
+  
+    // Trigger confetti on page load
+    window.onload = function() {
+      startConfetti();
+    };
+  </script>
+  
 </body>
 </html>
