--- a/shop.html
+++ b/shop.html
@@ -5,17 +5,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Shop page showcasing a variety of black and white art drawings and digital downloads." />
-  <title>Shop</title>
-
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
-        rel="stylesheet" 
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
-        crossorigin="anonymous" />
+  <title> Free Shop</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
   <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-  <!-- Navigation -->
   <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container">
@@ -42,36 +36,14 @@
         </div>
       </div>
     </nav>
-    <style>
-      .card-img-top {
-  height: 300px;
-  object-fit: contain;
-  background-color: #f8f9fa; /* light gray background to fill space */
-  padding: 10px;
-}
-
-      .card {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-}
-
-.card-body {
-  flex-grow: 1;
-}
-    </style>
   </header>
-
-  <!-- Main Content -->
   <main class="container my-5">
     <section class="text-center mb-5">
       <h1 class="fw-bold">Artwork</h1>
-      <p class="text-muted">High-contrast, black-and-white illustrations perfect for prints, gifts, and decor.</p>
+      <p class="text-muted">High-contrast, black-and-white illustrations perfect for coloring, relaxing and decor.</p>
     </section>
 
-    <!-- Product Grid -->
     <div class="row g-4">
-      <!-- Product Card -->
       <div class="col-sm-6 col-lg-4">
         <div class="card h-100">
           <img src="pictures/dino.jpg" class="card-img-top" alt="Black and white drawing of a dinosaur">
@@ -118,7 +90,6 @@
       </div>
     </div>
 
-    <!-- Download Section -->
     <hr class="my-5" />
     <section class="text-center mb-4">
       <h2 class="fw-bold">Download Now</h2>
@@ -157,10 +128,9 @@
       </div>
     </div>
   </main>
-
-  <!-- Footer -->
-  <footer class="text-center py-4 bg-light">
-    <p class="mb-0">&copy; 2025 Animation Class. All rights reserved.</p>
+  <footer>
+    <p>© 2025 Art Templates by Animation Class</p>
+    <p>Art at Home | Made with love and glitter ✨</p>
   </footer>
 
   <!-- Bootstrap JS -->
